# anaplan-ai

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  docker-compose.yml  pyproject.toml  railway.json
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_dimension_roles.py
app/: main.py
app/api/: deps.py
app/api/routes/: admin.py  anaplan.py  client.py  forms.py  jobs.py  upload.py
app/api/schemas/: form.py  tenant.py
app/core/: config.py  db.py  redis_client.py
app/models/: form_config.py  tenant.py  usage.py
app/services/: anaplan_client.py  audit.py  auth.py  config.py  config_profiles.py  excel_parser.py  excel_template.py  excel_writer.py  form_config_parser.py  form_template.py  generator.py  grid_parser.py  materiality.py  preview_store.py  prompts.py  tenant_service.py  webhook.py
app/static/: app.js  style.css
app/templates/: index.html
app/workers/: commentary.py
tests/: conftest.py  test_generation.py  test_materiality.py  test_onboarding.py  test_prompts.py
